first_stage/log/build_2024-08-16_11-38-39/first_stage_rg2/stderr.log
  File "/home/steven/ros2_ws/src/first_stage/install/first_stage_rg2/lib/python3.10/site-packages/first_stage_rg2/first_stage_rg2_ros2.py", line 159
    publishGripperCommand(0, 40);  // 完全閉合，力度40
                                          ^
SyntaxError: invalid character '，' (U+FF0C)

